syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bi.biservice";
//option java_outer_classname = "BiService";

package BiService;

// 统一请求
message CommonRequest {
  int32 msgId = 1;
  string message = 2;
}

// 统一回复
message CommonResponse {
  int32 msgId = 1;
  int32 code = 2;
  string message = 3;
}

